k8s/argocdapps/walnuts-dev-www-redirect/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: walnuts-dev-www-redirect
        app.kubernetes.io/name: walnuts-dev-www-redirect
    name: walnuts-dev-www-redirect
    namespace: walnuts-dev
spec:
    replicas: 1
    selector:
        matchLabels:
            app: walnuts-dev-www-redirect
            app.kubernetes.io/name: walnuts-dev-www-redirect
    template:
        metadata:
            labels:
                app: walnuts-dev-www-redirect
                app.kubernetes.io/name: walnuts-dev-www-redirect
        spec:
            containers:
                - image: nginx:1.27.2
                  name: walnuts-dev-www-redirect
                  ports:
                    - containerPort: 8080
                  resources:
                    limits:
                        memory: 100Mi
                    requests:
                        memory: 5Mi
                  securityContext: {}
                  volumeMounts:
                    - mountPath: /etc/nginx
                      name: walnuts-dev-www-redirect-conf
                      readOnly: true
                    - mountPath: /tmp
                      name: tmp
                    - mountPath: /var/tmp
                      name: tmp
                    - mountPath: /var/log/nginx
                      name: log-nginx
                    - mountPath: /var/cache/nginx
                      name: cache-nginx
                    - mountPath: /var/run
                      name: var-run
            volumes:
                - configMap:
                    items:
                        - key: nginx.conf
                          path: nginx.conf
                        - key: virtualhost.conf
                          path: virtualhost/virtualhost.conf
                    name: walnuts-dev-www-redirect-294757
                  name: walnuts-dev-www-redirect-conf
                - emptyDir: {}
                  name: tmp
                - emptyDir: {}
                  name: log-nginx
                - emptyDir: {}
                  name: cache-nginx
                - emptyDir: {}
                  name: var-run

---
